Fixed navbar and footer sizing issues on mobile and desktop

--- a/react-app/src/static/scss/layout.scss
+++ b/react-app/src/static/scss/layout.scss
@@ -50,24 +50,15 @@
         .navbar_mobile {
             @include flex-center;
             position: fixed;
-            height: 50px;
-            width: 100%;
+            height: 80px;
+            width: 100vw;
+            border-top-left-radius: 50%;
+            border-top-right-radius: 50%;
             left: 0;
             bottom: 0;
-            z-index: 1001;
+            z-index: 200000;
             background-color: $primary;
             transition-duration: .5s;
-
-            &::before {
-                content: '';
-                width: 100%;
-                height: 50px;
-                position: absolute;
-                top: -25px;
-                background-color: $primary;
-                border-radius: 50%;
-                z-index: -1;
-            }
 
             .navbar_external_links {
                 position: absolute;
@@ -545,24 +536,15 @@
             position: relative;
             display: flex;
             justify-content: center;
-            align-items: top;
+            align-items: center;
+            overflow-x: hidden;
             width: 100vw;
-            height: 150px;
-            margin: 250px 0 -10px 0;
-            padding: 0;
+            height: 200px;
+
+            border-top-left-radius: 50%;
+            border-top-right-radius: 50%;
+
             background-color: $primary;
-            z-index: 1;
-        
-            &::before {
-                content: '';
-                position: absolute;
-                background-color: $primary;
-                width: 100vw;
-                height: 150px;
-                border-radius: 50%;
-                z-index: 0;
-                bottom: 75px;
-            }
 
             .footer_external_links {
                 display: flex;
@@ -570,7 +552,6 @@
                 justify-content: space-evenly;
                 height: 45px;
                 background-color: transparent;
-                z-index: 1;
                 border: 2px solid $text;
                 border-top:none;
                 border-bottom:none;
